# SensorFusion

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  example_imu_gps_kitti.cpp  example_imu_gps_synthetic_data.cpp  example_odom_gps_synthetic_data.cpp  example_odometry_odometry_syntetic_data.cpp
src/: CMakeLists.txt
src/ukf_manifold/: CMakeLists.txt  base_state.h  lie_algebra.h  nav_state.cpp  nav_state.h  observations.h  odometry_state.cpp  odometry_state.h  ukf.h  ukf.hpp
test_data/imu_data/: imu_inputs.txt  imu_states.txt
test_data/kitti_data/: KittiGps.txt  KittiImuBiasedMetadata.txt
test_data/odom_data/: odom_inputs.txt  odom_states.txt
tests/: CMakeLists.txt  test_ukf_imu_gps.cpp
