add_executable(example_imu_gps_synthetic_data example_imu_gps_synthetic_data.cpp)
target_link_libraries(example_imu_gps_synthetic_data ukf_manifold_library)

add_executable(example_odom_gps_synthetic_data example_odom_gps_synthetic_data.cpp)
target_link_libraries(example_odom_gps_synthetic_data ukf_manifold_library)

add_executable(example_odometry_odometry_syntetic_data example_odometry_odometry_syntetic_data.cpp)
target_link_libraries(example_odometry_odometry_syntetic_data ukf_manifold_library)

add_executable(example_imu_gps_kitti example_imu_gps_kitti.cpp)
target_link_libraries(example_imu_gps_kitti ukf_manifold_library)
